# tlmc-etl

./: .gitignore  OriginalAlbums_Blank.csv  README.md  STEPS.md  TlmcInfoProviderV2.sln  create-checkpoint.py  main.py  pyproject.toml  requirements.txt
Docs/: STEPS.md
Docs/ExternalDataSource/: Thwiki.md
Experimental/: .gitignore  Colab_Jukemir.ipynb  README.md  cluster_eval.py  colbert.ipynb  colbert_idx_builder.py  genre_mapping.json  loader.py  main.py  mert.py  mert_batched.py  mert_batched_uuid.py  nb-colbert.ipynb  nb-pool-vlad.ipynb  nb-sim-centroid.ipynb  nb-sim-eval.ipynb  nb-sim-vari-testset.ipynb  nb-sim-vlad.ipynb  pyproject.toml  requirements.cuml.txt  sim-centroid.ipynb  sim-vlad.ipynb  umap-vis.py  umap-visualization.py  umap-viz-v2-vlad.py  umap-viz-v2.py  vector-search-build-index.py  vector-search.py
Experimental/data_transfer/: make_archive.py  proc_all_remux.py  proc_all_upload.py  transfer_stream.py
Experimental/data_transfer/utils/: common.py
Experimental/faiss_vector_search/: ann_vector_builder.py  ann_vector_search.py
Experimental/jukebox/: requirements.txt
Experimental/jukebox/jukebox/: make_models.py
Experimental/jukeboxmir/: Colab_Jukemir.ipynb  README.md  inference.py
Experimental/jukeboxmir/jukebox/jukebox/: make_models.py
Experimental/main/: README.md  mert_batched.py  mert_batched_uuid.py  mert_single.py  umap-viz-v2.py  umap_viz_v2.py
Experimental/notebooks/: nb-ann-faiss-builder.ipynb
Experimental/one_off/: assign_artist_uuids.py
Experimental/scripts/: README.md  cluster_eval.py  make_embeddings.py  mert_batched.py  mert_batched_uuid.py  mert_single.py  umap-visualization.py  umap-viz-v2-vlad.py
Experimental/utils/: data_utils.py  utils.py
Experimental/vector_search/: umap-preprocessor.py  vector-search-build-index-vlad.py  vector-search-build-index.py  vector-search.py  vector-web-app.py  vector_search.py  vector_search_build_chunked_index.py  vector_search_build_index.py
Experimental/webdemo/: .dockerignore  Dockerfile  README.md  app.py  prepare_deploy.ps1  requirements.txt
ExternalInfo/CacheInfoProvider/: AdvancedCache.py  Cache.py
ExternalInfo/TouhouDbInfoProvider/: generate-api-definitions.cmd
Finalizer/ApiPushToDb/: gen_client.sh  swagger.json
Finalizer/PushToDb/: AppDbContext.cs  PathValidator.cs  Program.cs  PushToDb.csproj  PushToDb.sln  runtimeconfig.json
InfoCollector/AlbumInfo/: disc_man_checker.py  info_scanner_ph1.py  info_scanner_ph2.py  info_scanner_ph3.py
Postprocessor/DashRepackage/: dash-repackage.py  file-target.py
Postprocessor/DbCommit/: finalize_filelist.py
Postprocessor/HlsTranscode/: hls-filelist-gen.py  hls-transcoder.py  hls_assignment.py  hls_assignment_from_dir.py  hls_completed_cleanup.py  hls_finalizer.py  hls_runner.py  hls_verify.py
Preprocessor/: extract.py
Shared/: cache_utils.py  json_utils.py  openai_utils.py  reporting_multi_processor.py  utils.py
(+146 files in other folders)
