[project]
name = "tlmc-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "furl>=2.1.4",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "m3u8>=6.0.0",
    "mslex>=1.3.0",
    "mwparserfromhell>=0.7.2",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "peewee>=3.18.2",
    "python-levenshtein>=0.27.1",
    "pythonnet>=3.0.5",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "tabulate>=0.9.0",
    "xxhash>=3.6.0",
]
