[project]
name = "experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "datasets>=2.19.1",
    "librosa>=0.11.0",
    "nnaudio>=0.3.3",
    "torch==2.6.0+cu124",
    "torchaudio==2.6.0+cu124",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
