[project]
name = "experimental"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "accelerate>=1.11.0",
    "annoy>=1.17.3",
    "cmake==3.25.0",
    "datasets>=2.19.1",
    "dotenv>=0.9.9",
    "google-cloud-storage>=3.5.0",
    "hdbscan>=0.8.40",
    "ipykernel>=7.1.0",
    "ipynb>=0.5.1",
    "jukemir",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "mpi4py>=4.1.1",
    "nnaudio>=0.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydub>=0.25.1",
    "torch==2.6.0+cu124",
    "torchaudio==2.6.0+cu124",
    "tqdm>=4.66.5",
    "transformers>=4.57.1",
    "umap-learn>=0.5.9.post2",
    "wget>=3.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
jukemir = { git = "https://github.com/p-lambda/jukemir.git" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
